<resources>
    <string name="app_name">Marketplace</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="facebook_app_id">640695042737322</string>
    <string name="twitter_consumer_key">nKcSDMF3M47ucKSQ6O1AwEpmH</string>
    <string name="twitter_consumer_secret">cub9TxWgILPVfJFUzvkkpqi9g1187YF8VfJvLj2Rfwgb9U6mry</string>
    <string name="navigation_header_1">Welcome!</string>
    <string name="navigation_header_2">Sign in</string>
    <string name="navigation_header_3">Sign out</string>
    <string name="navigation_subheader_2">More</string>
    <string name="navigation_subheader_3">About Marketplace</string>
    <string name="navigation_item_11">Home</string>
    <string name="navigation_item_12">Products</string>
    <string name="navigation_item_13">Deals</string>
    <string name="navigation_item_14">Auctions</string>
    <string name="navigation_item_15">Store Credit</string>
    <string name="navigation_item_16">Sold Out</string>
    <string name="navigation_item_17">Stores</string>
    <string name="navigation_item_18">Near Me</string>
    <string name="navigation_item_19">Blog</string>
    <string name="navigation_item_21">My Wishlist</string>
    <string name="navigation_item_22">My Account</string>
    <string name="navigation_item_23">My Orders</string>
    <string name="navigation_item_24">My Referral List</string>
    <string name="navigation_item_25">My Subscriptions</string>
    <string name="navigation_item_26">My Bid History</string>
    <string name="navigation_item_27">Club Membership</string>
    <string name="navigation_item_28">Shipping Address</string>
    <string name="navigation_item_31">Help &amp; About</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="welcome_text">Welcome to Zmart!</string>
    <string name="already_a_customer">Already a customer?</string>
    <string name="new_to_marketplace">New to Marketplace?</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="get_started">Get started</string>
    <string name="start_shopping">Start shopping</string>
    <string name="start_shopping_text">Start shopping from the most popular categories</string>
    <string name="shop_hot_products">Shop hot products</string>
    <string name="shop_hot_deals">Shop hot deals</string>
    <string name="shop_hot_auctions">Shop hot auctions</string>
    <string name="view_all">View all</string>
    <string name="deals_and_auctions">Deals and Auctions</string>
    <string name="view_stores">Find stores closest to you!</string>
    <string name="explore">Explore</string>
    <string name="please_sign_in">Please sign in first.</string>
    <string name="added_to_wishlist">" has been added to your wishlist."</string>
    <string name="added_to_cart">" has been added to your cart."</string>
    <string name="added_to_compare">" has been added to your compare list."</string>
    <string name="bid_value">Bid value</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email Address</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_unique_identifier">Unique Identifier</string>
    <string name="register_next">Next</string>
    <string name="register_have_account">Already have an account?</string>
    <string name="register_sign_in_here">Sign in here</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_gender">Gender</string>
    <string name="register_city">City</string>
    <string name="register_mobile_number">Mobile number</string>
    <string name="register_terms">Read the Terms and Conditions</string>
    <string name="register_terms_message">Lorem Ipsum Dolor is the standard text of the printing industry &#8230;
        Lorem Ipsum Dolor is the standard text of the printing industry&#8230;</string>
    <string name="register_agree">I agree to the terms and conditions.</string>
    <string name="ok">OK</string>
    <string name="register_submit">Submit</string>
    <string name="register_back">Back</string>
    <string name="register_account_info">Setting up your account...</string>
    <string name="error_username">Please enter your username</string>
    <string name="error_email">Please enter your email address</string>
    <string name="error_valid_email">Please enter a valid email address</string>
    <string name="error_password">Please enter your password</string>
    <string name="error_short_password">Please enter a minimum of 6 characters</string>
    <string name="error_confirm_password">Please confirm your password</string>
    <string name="error_compare_password">The two passwords do not match! Please re-enter your password correctly.</string>
    <string name="error_unique_identifier">Please enter your Unique Identifier</string>
    <string name="error_firstname">Please enter your first name</string>
    <string name="error_lastname">Please enter your last name</string>
    <string name="error_mobile">Please enter your mobile number</string>
    <string name="error_city">Please select your city</string>
    <string name="error_gender">Please select your gender</string>
    <string name="error_age_range">Please select your age range</string>
    <string name="error_agree">Please agree to our terms and conditions.</string>
    <string name="error_country">Please select your country</string>
    <string name="country_name">Country</string>
    <string name="city_name">City</string>
    <string-array name="gender_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="age_range">
        <item>Age Range</item>
        <item>17 and below</item>
        <item>18&#8211;25</item>
        <item>26&#8211;35</item>
        <item>36&#8211;45</item>
        <item>46&#8211;65</item>
        <item>66 and above</item>
    </string-array>
    <string-array name="country">
        <item>Country</item>
        <item>Nigeria</item>
    </string-array>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="request_password">Request your password</string>
    <string name="enter_email_address">Enter your email address</string>
    <string name="verify_account_info">Verifying your account information</string>
    <string name="successful_login">Logged in successfully</string>
    <string name="price">Price</string>
    <string name="discount">Discount:</string>
    <string name="size">Size:</string>
    <string name="similar_products">Similar products</string>
    <string name="shipping_type">Shipping Information:</string>
    <string name="category">Category</string>
    <string name="time_left">Time remaining:</string>
    <string name="description">Description</string>
    <string name="store_info">Store Information</string>
    <string name="view_details">View Details</string>
    <string name="more_details">More Details</string>
    <string name="share_product">Share Product</string>
    <string name="similar_deals">Similar deals</string>
    <string name="terms">Terms and Conditions:</string>
    <string name="share_deal">Share Deal</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="retail_price">Retail Price:</string>
    <string name="bid_values">Bid Value:</string>
    <string name="auction_type">Auction Type(s):</string>
    <string name="bid_history">Bid History</string>
    <string name="shipping_info">Shipping Information:</string>
    <string name="shipping_amount">Shipping Fee:</string>
    <string name="share_auction">Share Auction</string>
    <string name="last_bidder">Last Bidder:</string>
    <string name="bid_amount">Bid Amount:</string>
    <string name="similar_auction">Similar Auctions</string>
    <string name="subtotal">Sub Total = </string>
    <string name="grand_total">Grand Total</string>
    <string name="cart_continue">Continue Shopping</string>
    <string name="checkout">Checkout</string>
    <string name="delete">Remove</string>
    <string name="update">Update</string>
    <string name="quantity">Quantity</string>
    <string name="update_error">Please enter a number greater than 0</string>
    <string name="no_items">You don\'t have any items in your cart. Start shopping now.</string>
    <string name="choose_payment_type">Choose payment type</string>
    <string name="interswitch">Interswitch</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="pay_later">Pay later</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="billing_address">Billing Address</string>
    <string name="shipping_user">Name</string>
    <string name="shipping_address_1">Address 1</string>
    <string name="shipping_address_2">Address 2</string>
    <string name="shipping_country">Country</string>
    <string name="shipping_state">State</string>
    <string name="shipping_city">City</string>
    <string name="shipping_mobile">Mobile Number</string>
    <string name="shipping_zipcode">Zipcode</string>
    <string name="free_ship">Free Shipping</string>
    <string name="flat_ship">Flat Shipping</string>
    <string name="product_ship">Product Based Shipping</string>
    <string name="quantity_ship">Quantity Based Shipping</string>
    <string name="profile_firstname">First name</string>
    <string name="profile_lastname">Last name</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Phone</string>
    <string name="skip">SKIP</string>
    <string name="done">DONE</string>
    <string name="fragment_one_title">Navigate to Deals, Products and Auctions</string>
    <string name="fragment_one_message">Also update account details, change shipping address and view orders</string>
    <string name="fragment_two_title">Select Start Shopping to choose categories</string>
    <string name="fragment_two_message">Choose from different categories to shop from</string>
    <string name="fragment_three_title">Add products to wishlist or cart</string>
    <string name="fragment_three_message">Add products from your wishlist to your cart later</string>
    <string name="fragment_four_title">Sign up for club membership</string>
    <string name="fragment_four_message">Gain exclusive instalment payment privileges</string>
    <string name="network_failure">Network failure</string>
    <string name="working_data_connection">This application requires a working data connection.</string>
    <string name="unable_to_connect">Unable to connect to server.</string>
    <string name="try_again">Try again</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_deals">Deals</string>
    <string name="title_activity_auctions">Auctions</string>
    <string name="title_activity_store_credit">Store Credit</string>
    <string name="title_activity_sold_out">Sold Out</string>
    <string name="title_activity_near_me">Near Me</string>
    <string name="title_activity_stores">Stores</string>
    <string name="title_activity_blog">Blog</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_sign_in">Sign In</string>
</resources>