<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BaseActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_navigation_item_11"
            android:checked="false"
            android:icon="@drawable/ic_action_home"
            android:title="@string/navigation_item_11" />

        <item
            android:id="@+id/main_navigation_item_12"
            android:checked="false"
            android:icon="@drawable/ic_products"
            android:title="@string/navigation_item_12" />

        <item
            android:id="@+id/main_navigation_item_13"
            android:checked="false"
            android:icon="@drawable/ic_action_deals"
            android:title="@string/navigation_item_13" />

        <item
            android:id="@+id/main_navigation_item_14"
            android:checked="false"
            android:icon="@drawable/ic_action_auction"
            android:title="@string/navigation_item_14" />

        <item
            android:id="@+id/main_navigation_item_15"
            android:checked="false"
            android:icon="@drawable/ic_action_store_credit"
            android:title="@string/navigation_item_15" />

        <item
            android:id="@+id/main_navigation_item_16"
            android:checked="false"
            android:icon="@drawable/ic_action_sold_out"
            android:title="@string/navigation_item_16" />

        <item
            android:id="@+id/main_navigation_item_17"
            android:checked="false"
            android:icon="@drawable/ic_action_stores"
            android:title="@string/navigation_item_17" />

        <item
            android:id="@+id/main_navigation_item_18"
            android:checked="false"
            android:icon="@drawable/ic_action_near_me"
            android:title="@string/navigation_item_18" />

        <item
            android:id="@+id/main_navigation_item_19"
            android:checked="false"
            android:icon="@drawable/ic_action_blog"
            android:title="@string/navigation_item_19" />

        <item
            android:id="@+id/navigation_subheader_2"
            android:title="@string/navigation_subheader_2">
            <menu>
                <item
                    android:id="@+id/main_navigation_item_21"
                    android:checked="false"
                    android:icon="@drawable/ic_action_my_wishlist"
                    android:title="@string/navigation_item_21" />

                <item
                    android:id="@+id/main_navigation_item_22"
                    android:checked="false"
                    android:icon="@drawable/ic_action_my_account"
                    android:title="@string/navigation_item_22" />

                <item
                    android:id="@+id/main_navigation_item_23"
                    android:checked="false"
                    android:icon="@drawable/ic_action_my_orders"
                    android:title="@string/navigation_item_23" />

                <item
                    android:id="@+id/main_navigation_item_24"
                    android:checked="false"
                    android:icon="@drawable/ic_action_my_wishlist"
                    android:title="@string/navigation_item_24" />

                <item
                    android:id="@+id/main_navigation_item_25"
                    android:checked="false"
                    android:icon="@drawable/ic_action_my_subscriptions"
                    android:title="@string/navigation_item_25" />

                <item
                    android:id="@+id/main_navigation_item_26"
                    android:checked="false"
                    android:icon="@drawable/ic_action_my_bid_history"
                    android:title="@string/navigation_item_26" />

                <item
                    android:id="@+id/main_navigation_item_27"
                    android:checked="false"
                    android:icon="@drawable/ic_action_club_membership"
                    android:title="@string/navigation_item_27" />

                <item
                    android:id="@+id/main_navigation_item_28"
                    android:checked="false"
                    android:icon="@drawable/ic_action_shipping_address"
                    android:title="@string/navigation_item_28" />

            </menu>
        </item>

        <item
            android:id="@+id/navigation_subheader_2_1"
            android:title="@string/navigation_subheader_2">
            <menu>
                <item
                    android:id="@id/main_navigation_item_27"
                    android:checked="false"
                    android:icon="@drawable/ic_action_club_membership"
                    android:title="@string/navigation_item_27" />
            </menu>
        </item>

        <item
            android:id="@+id/navigation_subheader_3"
            android:title="@string/navigation_subheader_3">
            <menu>
                <item
                    android:id="@+id/main_navigation_item_31"
                    android:checked="false"
                    android:icon="@drawable/ic_action_help"
                    android:title="@string/navigation_item_31" />
            </menu>
        </item>
    </group>

</menu>